# factorio-updater

./: Cargo.toml
src/: main.rs  update.rs
