[package]
authors = ["test <test@example.com>"]
edition = "2018"
name = "factorio-update-checker"
version = "0.1.0"
[dependencies]
console = "*"
dirs = "*"
futures-util = "*"
indicatif = "*"
itertools = "*"
regex = "*"
serde_json = "*"
tempfile = "*"
thiserror = "*"
toml = "*"

[dependencies.reqwest]
default-features = false
features = ["native-tls", "stream"]
version = "*"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.tokio]
features = ["full"]
version = "*"
